# prisma-shared

./: .gitignore  ARCHITECTURE.md  README.md  install.sh  pyproject.toml  test_imports.py  test_simple_logging.py
.github/workflows/: ci.yml  private-release.yml  release.yml
config/: logging.yaml
docs/: INDUSTRIAL_LOGGING.md
examples/: logging_example.py
src/common/: __init__.py
src/common/config/: __init__.py  settings.py
src/common/mcp/: commands.json  mcp_client_for_mcp_bench.py  mcp_servers_info.json
src/common/operators/: base_op.py  browser_use_op.py  custom_op.py  deep_research_op.py  extract_op.py  file_processing_op.py  format_op.py  operator_manager.py  simple_test_op.py  synthesis_op.py
src/common/operators/archive/: cohesion_op.py  search_op.py
src/common/operators/llm/: llm_provider.py  llm_wrapped_agent.py
src/common/operators/prompts/: cohesion_prompts.yaml  custom_prompts.yaml  deep_research_prompts.yaml  extract_prompts.yaml  file_processing_prompts.yaml  simple_test_prompts.yaml
src/common/tools/: code_act_tool.py  final_answer_tool.py  firecrawl_tool.py  tool_manager.py  workflow_execution_tool.py
src/common/tools/sandbox/: daytona_sandbox.py  local_sandbox.py
src/common/utils/: logging.py  logging_config.py
src/prisma_common/: __init__.py
src/prisma_common/config/: environments.py
src/prisma_common/operators/: base_op.py  browser_use_op.py  extract_op.py  file_processing_op.py  format_op.py  operator_manager.py  synthesis_op.py  utils.py
src/prisma_common/operators/archive/: cohesion_op.py
src/prisma_common/operators/llm/: llm_wrapped_agent.py
src/prisma_common/operators/prompts/: browser_use_prompts.yaml  ensemble_prompts.yaml  format_prompts.yaml  search_prompts.yaml  synthesis_prompts.yaml
src/prisma_common/tools/: tool_manager.py
src/prisma_common/tools/interpreter/: local_interpreter.py
src/prisma_common/tools/sandbox/: daytona_sandbox.py
src/prisma_common/utils/: LOGGING.md  __init__.py  log_monitor.py
tests/: __init__.py  tests_logging.py
