[project]
name = "common"
version = "0.1.0"
description = "Comprehensive SDK for Prisma microservices platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Prisma Platform Team", email = "team@prisma-platform.com"}
]
maintainers = [
    {name = "Prisma Platform Team", email = "team@prisma-platform.com"}
]
keywords = ["prisma", "microservices", "logging", "sdk", "platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Private :: Do Not Upload",  # 标记为私有包，不上传到公共PyPI
]
project-urls = { Homepage = "https://github.com/nodetree-io/prisma-shared", Repository = "https://github.com/nodetree-io/prisma-shared", Issues = "https://github.com/nodetree-io/prisma-shared/issues", Documentation = "https://github.com/nodetree-io/prisma-shared#readme" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "pytest>=8.4.2",
    "e2b-code-interpreter>=2.2.0",
    "daytona>=0.111.0",
]

[project.optional-dependencies]
system = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

gmail = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
]

notion = [
    "notion-client>=2.0.0",
]

ai = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]

all = [
    "common[gmail,notion,ai]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.hatch.build.targets.sdist]
packages = ["src/common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = ["src", "examples", "docs", "build", "dist", ".git", ".tox", ".venv", "venv", "__pycache__", "*.egg-info"]
