[project]
name = "prisma-shared"
version = "0.1.0"
description = "Comprehensive SDK for Prisma microservices platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.4.4",
    "camelot-py>=1.0.9",
    "colorama>=0.4.6",
    "composio-client>=1.9.1",
    "dotenv>=0.9.9",
    "dotenv-python>=0.0.1",
    "ffmpeg>=1.4",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-gemini>=0.1.1",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "litellm>=1.77.1",
    "markitdown>=0.1.3",
    "mcp-use>=1.3.10",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "python-pptx>=1.0.2",
    "scenedetect>=0.6.7",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.hatch.build.targets.sdist]
packages = ["src/common"]
